# pyQT

./: .gitignore  introduction.md  untitled.ui
combox/: combox.ui  combox_ui.py  combox_xianshi.py
compress_data/: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.py
compress_data/docs/: architecture.md
compress_data/docs/superpowers/specs/: 2026-07-13-spectrum-compressor-design.md
compress_data/scripts/: build_linux.sh  build_windows.ps1  run_linux.sh  run_windows.ps1
compress_data/src/spectrum_compressor/: __init__.py  application.py  compression.py  config.py  logging_setup.py  main.py  models.py  monitoring.py  serial_comm.py  storage.py
compress_data/src/spectrum_compressor/ui/: __init__.py  main_window.py
compress_data/tests/: __init__.py  test_application.py  test_compression.py  test_config.py  test_monitoring.py  test_serial_comm.py  test_startup.py  test_storage.py  test_ui.py
huanyaunchazhi/restore/: README.md  SpectrumRestore.spec  pyproject.toml  run_app.py
huanyaunchazhi/restore/docs/: 使用与算法说明.md
huanyaunchazhi/restore/scripts/: build_windows.ps1  run_windows.ps1
huanyaunchazhi/restore/src/spectrum_restore/: __init__.py  compression_contract.py  formatting.py  interpolation.py  main.py  models.py  parsing.py  restoration.py
huanyaunchazhi/restore/src/spectrum_restore/ui/: __init__.py  main_window.py  worker.py
huanyaunchazhi/restore/tests/: test_compression_contract.py  test_distribution.py  test_formatting.py  test_interpolation.py  test_parsing.py  test_restoration.py  test_startup.py  test_ui.py
timer/: timer.py  (+3 more)
(+10 files in other folders)
