[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrum-compressor"
version = "1.0.0"
description = "PyQt6 spectrum compression and serial transmission desktop application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5,<7",
    "pyserial>=3.5,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pyinstaller>=6,<7",
]

[project.scripts]
spectrum-compressor = "spectrum_compressor.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
