[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrum-restore"
version = "1.0.0"
description = "Windows PyQt6 application for restoring compressed spectra"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.5,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pyinstaller>=6,<7",
]

[project.scripts]
spectrum-restore = "spectrum_restore.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
